# C-latin1-----utf-conversion

./: .gitignore  CMakeLists.txt  helpers.h  latin1_to_utf32.h  main.cpp  tests.h  utf16_to_latin1.h  utf8_to_latin1.h
